--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
+    "flask>=3.1.1",
     "mysql-connector-python>=9.3.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
