--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
     "flask>=3.1.1",
     "mysql-connector-python>=9.3.0",
     "openpyxl>=3.1.5",
